--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <!-- Navigation component -->
       <nav class="navBar lightBackground">
         <a href="/weather-comp.html" class="logo">KIVI</a>
-        <ul class="links">
+        <ul? class="links">
           <li class="mx-4">Home</li>
           <li class="mx-4">News</li>
           <li class="mx-4">Blogs</li>
           <li class="mx-4">Books</li>
-        </ul>
+      </ul>
         <ul class="btns">
           <span class="settings material-symbols-outlined"> settings </span>
           <span class="material-symbols-outlined"> person </span>
